:style: Alteração da cor do background

--- a/codigo-fonte/src/perfilVoluntario/perfilVoluntario.html
+++ b/codigo-fonte/src/perfilVoluntario/perfilVoluntario.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-sm bg-body-tertiary navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand d-flex nav-link ms-2" href="#">
-                <img src="logo.svg" alt="Logo" width="40" class="d-inline-block align-text-top">
+                <img src="imagens/logo.svg" alt="Logo" width="40" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -48,14 +48,14 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <div class="perfil">
-        <img src="icone.png" width="200" height="200" alt="icone de perfil">
+        <img src="imagens/icone.png" width="200" height="200" alt="icone de perfil">
     </div>
 
     <div class="info">
         <p>Nome: Letícia <br> Nivel atual: Esmeralda <br> Horas: 7</p>
     </div>
     <div class="rank">
-        <img src="esmeralda.png" width="150" height="150" alt="esmeralda">
+        <img src="imagens/esmeralda.png" width="150" height="150" alt="esmeralda">
     </div>
 
     <div class="certificado">
@@ -64,47 +64,50 @@
 
     <div class="niveis">
         <p>
-            1 hora de voluntariado - Nível Safira <img src="safira.png" width="15" height="15" alt="safira"> <br>
-            5 horas de voluntariado - Nível Esmeralda <img src="esmeralda.png" width="15" height="15" alt="esmeralda">
+            1 hora de voluntariado - Nível Safira <img class="icone-niveis" src="imagens/safira.png" width="15" height="15" alt="safira"> <br>
+            5 horas de voluntariado - Nível Esmeralda <img class="icone-niveis" src="imagens/esmeralda.png"  alt="esmeralda">
             <br>
-            20 horas de voluntariado - Nível Rubi <img src="rubi.png" width="15" height="15" alt="rubi">
+            20 horas de voluntariado - Nível Rubi <img class="icone-niveis"  src="imagens/rubi.png"  alt="rubi">
             <br>
-            40 horas de voluntariado - Nível Ametista <img src="ametista.png" width="15" height="15" alt="ametista">
+            40 horas de voluntariado - Nível Ametista <img class="icone-niveis" src="imagens/ametista.png" alt="ametista">
+        </p>    
     </div>
-   
-   <h3>Projetos em andamento</h3>
+
+    <div class="projetos">
+    <h3>Projetos em andamento</h3>
 
 
     <div class="cards">
-        <div class="titulo 1">
+        <div class="titulo">
             <h2>Título</h2>
             <p>Horas:</p>
-            <img class="image" src="card.png" width="150" height="150" alt="card">
+            <img class="image" src="imagens/card.png" width="120" height="120" alt="card">
             <br><button>Finalizar</button>
         </div>
 
-        <div class="titulo 2">
+        <div class="titulo">
             <h2>Título</h2>
             <p>Horas:</p>
-            <img class="image" src="card.png" width="150" height="150" alt="card">
+            <img class="image" src="imagens/card.png" width="120" height="120" alt="card">
             <br><button>Finalizar</button>
 
         </div>
 
 
-        <div class="titulo 3">
+        <div class="titulo">
             <h2>Título</h2>
             <p>Horas:</p>
-            <img class="image" src="card.png" width="150" height="150" alt="card">
+            <img class="image" src="imagens/card.png" width="120" height="120" alt="card">
             <br><button>Finalizar</button>
 
         </div>
+    </div>
 
     </div>
 
 
 
-    </p>
+    
 
 
 </body>
