--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -40,13 +40,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projetos</a>
+              <a class="nav-link" href="./projetos/projetos.html">Projetos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Entrar</a>
+              <a class="nav-link" href="./loginCadastro/loginCadastro.html">Entrar</a>
             </li>
           </ul>
         </div>
