--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -5,6 +5,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="projetos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="projetos.js"></script>
     <script src="https://kit.fontawesome.com/9e6a074965.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -37,7 +38,7 @@
                 </nav>
               </header>
             <div class="menu-categoria">
-                <h2>Categorias</h2>
+                <h2 class="menu-categoria-titulo">Categorias</h2>
                 <nav class="container-flex-categoria">
                     <ul>
                         <li class="item-categoria"><a class="link-categoria" href="#" >Saúde</a></li>
@@ -48,8 +49,24 @@
                         <li class="item-categoria"><a class="link-categoria" href="#" >Adoção</a></li>
                     </ul>
                 </nav>
-    
-            </div>            
+             </div> 
+             <div class="menu-categoria-1col" onclick="expandNav()">
+                <div class="botao-categoria-1col">
+                    <h2 class="menu-categoria-titulo-1col">Categorias</h2>
+                    <i id="icone-dropdown" class="fa-2xl fa-solid fa-caret-down"></i>
+                </div>
+                
+                <nav class="lista-categoria-1col">
+                    <ul>
+                        <li class="item-categoria"><a class="link-categoria" href="#" >Saúde</a></li>
+                        <li class="item-categoria"><a class="link-categoria" href="#" >Educação</a></li>
+                        <li class="item-categoria"><a class="link-categoria" href="#" >Alimentação</a></li>
+                        <li class="item-categoria"><a class="link-categoria" href="#" >Doação</a></li>
+                        <li class="item-categoria"><a class="link-categoria" href="#" >Visitação</a></li>
+                        <li class="item-categoria"><a class="link-categoria" href="#" >Adoção</a></li>
+                    </ul>
+                </nav>
+             </div>            
 
                 <div class="container-card">
                     <img class="image-cards" src="images/imagem-voluntarios-01.jpg"> 
