--- a/codigo-fonte/src/perfilVoluntario/perfilVoluntario.html
+++ b/codigo-fonte/src/perfilVoluntario/perfilVoluntario.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/menu.css">
-     
+
 </head>
 
 <body>
@@ -46,68 +46,80 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <div class="body">
+
+
+    <div class="pagina-perfil">
         <div class="perfil">
-            <img src="imagens/icone.png" width="200" height="200" alt="icone de perfil">
+            <img src="imagens/icone.png" alt="icone de perfil">
         </div>
+
 
         <div class="info">
-            <p>Nome: Letícia <br> Nivel atual: Esmeralda <br> Horas: 7</p>
+            <h2>Nome: Letícia <h2>
+                    <p>Nivel atual: Esmeralda</p>
+                    <p>Horas: 7</p>
+                    <button class="botao-certificado">Emitir Certificado</button>
         </div>
+
         <div class="rank">
-            <img src="imagens/esmeralda.png" width="150" height="150" alt="esmeralda">
-        </div>
-
-        <div class="certificado">
-            <button>Emitir Certificado</button>
-        </div>
-
-        <div class="niveis">
-            <p>
-                1 hora de voluntariado - Nível Safira <img class="icone-niveis" src="imagens/safira.png" width="15"
-                    height="15" alt="safira"> <br>
-                5 horas de voluntariado - Nível Esmeralda <img class="icone-niveis" src="imagens/esmeralda.png"
-                    alt="esmeralda">
-                <br>
-                20 horas de voluntariado - Nível Rubi <img class="icone-niveis" src="imagens/rubi.png" alt="rubi">
-                <br>
-                40 horas de voluntariado - Nível Ametista <img class="icone-niveis" src="imagens/ametista.png"
-                    alt="ametista">
-            </p>
-        </div>
-
-        <div class="projetos">
-            <h3>Projetos em andamento</h3>
-
-
-            <div class="cards">
-                <div class="titulo">
-                    <h2>Título</h2>
-                    <p>Horas:</p>
-                    <img class="image" src="imagens/card.png" width="120" height="120" alt="card">
-                    <br><button>Finalizar</button>
-                </div>
-
-                <div class="titulo">
-                    <h2>Título</h2>
-                    <p>Horas:</p>
-                    <img class="image" src="imagens/card.png" width="120" height="120" alt="card">
-                    <br><button>Finalizar</button>
-
-                </div>
-
-
-                <div class="titulo">
-                    <h2>Título</h2>
-                    <p>Horas:</p>
-                    <img class="image" src="imagens/card.png" width="120" height="120" alt="card">
-                    <br><button>Finalizar</button>
-
-                </div>
-            </div>
-
+            <img src="imagens/esmeralda.png" alt="esmeralda">
         </div>
     </div>
+
+
+
+    <div class="niveis">
+        <h3>Níveis de voluntariado:</h3>
+
+        <p class="lista">
+            1 hora de voluntariado - Nível Safira <img class="icone-niveis" src="imagens/safira.png" alt="safira"> <br>
+
+            5 horas de voluntariado - Nível Esmeralda <img class="icone-niveis" src="imagens/esmeralda.png"
+                alt="esmeralda"> <br>
+
+            20 horas de voluntariado - Nível Rubi <img class="icone-niveis" src="imagens/rubi.png" alt="rubi"> <br>
+
+            40 horas de voluntariado - Nível Ametista <img class="icone-niveis" src="imagens/ametista.png"
+                alt="ametista">
+        </p>
+    </div>
+
+    <div class="projetos">
+        <h3>Projetos em andamento</h3>
+
+
+        <div class="cards">
+            <div class="projeto-card">
+                <div class="conteudo-card">
+                    <h4>Adoção de animais</h4>
+                    <p>Horas: 2</p>
+                </div>
+                <img src="imagens/projeto1.png" alt="cachorro">
+                <button class="botao-finalizar">Finalizar</button>
+            </div>
+
+            <div class="projeto-card">
+                <div class="conteudo-card">
+                    <h4>Limpeza nas ruas</h4>
+                    <p>Horas: 4</p>
+                </div>
+                <img src="imagens/projeto2.jpg" alt="limpeza">
+                <button class="botao-finalizar">Finalizar</button>
+            </div>
+
+
+            <div class="projeto-card">
+                <div class="conteudo-card">
+                    <h4>Doação de agasalhos</h4>
+                    <p>Horas: 1</p>
+                </div>
+                <img src="imagens/projeto3.jpg" alt="doação">
+                <button class="botao-finalizar">Finalizar</button>
+            </div>
+        </div>
+
+    </div>
+
 
 
 
