:sparkles: feat: Correcao ortografica

--- a/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
+++ b/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
@@ -66,7 +66,7 @@
                             <input type="text" class="form-control" id="input2" placeholder="Exemplo: PUC Minas">
                         </div>
                         <div class="mb-4">
-                            <label for="horas" class="form-label">Disponibilidade em horas necessárias:</label>
+                            <label for="horas" class="form-label">Disponibilidade de horas necessárias:</label>
                             <input type="number" class="form-control" id="horas" name="horas">
                         </div>
                         <div class="mb-4">
