--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -4,39 +4,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="projetos.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="nav-topo.css">
     <script src="projetos.js"></script>
     <script src="https://kit.fontawesome.com/9e6a074965.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="corpo">
         <div class="grid-wrapper">
-            <header>
-                <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
-                  <div class="container-fluid rounded-3 mx-3">
-                    <a class="navbar-brand d-flex nav-link ms-2" href="#">
-                      <img src="../geral/menu/logo-white.svg" alt="Logo" width="45" class="d-inline-block align-text-top">
+                <header class="flex-container-header">
+                    <a class="link-logotipo" href="../index.html">
+                        <img class="logotipo" src="../geral/menu/logo-white.svg">
                     </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                      <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="../projetos/projetos.html">Projetos</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="../loginCadastro/loginCadastro.html">Entrar</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </nav>
-              </header>
+                    
+                    <nav>
+                    
+                    <ul class="ul-list">
+                        <li class="menu-item"><a class="link-menu-topo" href="../index.html">Home</a></li>
+                        <li class="menu-item"><a class="link-menu-topo" href="projetos.html">Projetos</a></li>
+                        <li class="menu-item"><a class="link-menu-topo" href="../loginCadastro/loginCadastro.html">Entrar</a></li>
+                    </ul>
+                    </nav>
+                    <img class="menu-img" src="svg/list-menu.svg" onclick="expandMenu()">
+                </header>             
             <div class="menu-categoria">
                 <h2 class="menu-categoria-titulo">Categorias</h2>
                 <nav class="container-flex-categoria">
