--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -12,7 +12,7 @@
     <div class="corpo">
         <div class="grid-wrapper">
                 <header class="flex-container-header">
-                    <a class="link-logotipo" href="../index.html">
+                    <a class="link-logotipo" href="../index.html">         
                         <img class="logotipo" src="../geral/menu/logo-white.svg">
                     </a>
                     
@@ -24,7 +24,7 @@
                         <li class="menu-item"><a class="link-menu-topo" href="../loginCadastro/loginCadastro.html">Entrar</a></li>
                     </ul>
                     </nav>
-                    <img class="menu-img" src="svg/list-menu.svg" onclick="expandMenu()">
+                    <svg class= "menu-img" xmlns="http://www.w3.org/2000/svg" onclick="expandMenu()" height="1.6em" fill= "gray" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
                 </header>             
             <div class="menu-categoria">
                 <h2 class="menu-categoria-titulo">Categorias</h2>
