--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -70,7 +70,7 @@
                     <img class="image-cards" src="images/imagem-voluntarios-02.jpg"> 
                 <article>     
                     <h2>Unidos pelos Idosos</h2>
-                    <p class="botao-vermais">Veja mais...</p>
+                    <p class="botao-vermais" onclick="Modal()">Veja mais...</p>
                 </article>
                 </div>
 
@@ -79,7 +79,7 @@
                     <img class="image-cards" src="images/imagem-voluntarios-03.jpg"> 
                 <article>     
                     <h2>Moradores de rua</h2>
-                    <p class="botao-vermais">Veja mais...</p>
+                    <p class="botao-vermais" onclick="Modal()">Veja mais...</p>
                 </article>
                 </div>
 
@@ -88,7 +88,7 @@
                     <img class="image-cards" src="images/imagem-voluntarios-04.jpg"> 
                 <article>     
                     <h2>Oficina de culinária</h2>
-                    <p class="botao-vermais">Veja mais...</p>
+                    <p class="botao-vermais" onclick="Modal()">Veja mais...</p>
                 </article>
                 </div>
 
@@ -97,7 +97,7 @@
                     <img class="image-cards" src="images/imagem-voluntarios-05.jpg"> 
                 <article>     
                     <h2>Projeto Alimentar</h2>
-                    <p class="botao-vermais">Veja mais...</p>
+                    <p class="botao-vermais" onclick="Modal()">Veja mais...</p>
                 </article>
                 </div>
 
@@ -106,7 +106,7 @@
                     <img class="image-cards" src="images/imagem-voluntarios-06.jpg"> 
                 <article>     
                     <h2>Acessibilidade já!</h2>
-                    <p class="botao-vermais">Veja mais...</p>
+                    <p class="botao-vermais" onclick="Modal()">Veja mais...</p>
                 </article>
                 </div>
 
@@ -115,7 +115,7 @@
                     <img class="image-cards" src="images/imagem-voluntarios-07.jpg"> 
                 <article>     
                     <h2>Limpeza das praias</h2>
-                    <p class="botao-vermais">Veja mais...</p>
+                    <p class="botao-vermais" onclick="Modal()">Veja mais...</p>
                 </article>
                 </div>
 
@@ -124,7 +124,7 @@
                     <img class="image-cards" src="images/imagem-voluntarios-08.jpg"> 
                 <article>     
                     <h2>Projeto Manguezal</h2>
-                    <p class="botao-vermais">Veja mais...</p>
+                    <p class="botao-vermais" onclick="Modal()">Veja mais...</p>
                 </article>
                 </div>
 
@@ -133,7 +133,7 @@
                     <img class="image-cards" src="images/imagem-voluntarios-09.jpg"> 
                 <article>     
                     <h2>Adote um pet</h2>
-                    <p class="botao-vermais">Veja mais...</p>
+                    <p class="botao-vermais" onclick="Modal()">Veja mais...</p>
                 </article>
                 </div>
 
