--- a/codigo-fonte/src/geral/footer/footer.html
+++ b/codigo-fonte/src/geral/footer/footer.html
@@ -1,4 +1,4 @@
-<footer class="text-center text-white pt-3">
+<footer class="section text-center text-white">
     <hr class="my-4" />
     <div class="container">
         <div class="row text-center d-flex justify-content-center">
@@ -27,6 +27,7 @@
     </div>
     <hr class="my-4 mb-4" />
     <div class="text-center p-3 rounded-4 mb-3" style="background-color: rgba(0, 0, 0, 0.2)">
+        <p class="mb-1">Todos os direitos reservados</p>
         <h6> © 2023 Copyright: VoluntaRia</h6>
     </div>
 </footer>
