--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -55,7 +55,7 @@
   </header>
 
   <main class="container" id="mainContent">
-    <div class="section section-1">
+    <div class="section section-1 mt-5">
       <div class="card rounded-5 pb-4">
         <div class="row title">
           <div class="col-12 text-center mt-5">
@@ -228,6 +228,7 @@
     </div>
     <hr class="my-4 mb-4" />
     <div class="text-center p-3 rounded-4 mb-3" style="background-color: rgba(0, 0, 0, 0.2)">
+      <p class="mb-1">Todos os direitos reservados</p>
       <h6> © 2023 Copyright: VoluntaRia</h6>
     </div>
   </footer>
