:art:style: Ajusta layout do footer

--- a/codigo-fonte/src/loginCadastro/loginCadastro.html
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.html
@@ -208,9 +208,10 @@
       </section>
       <footer class="section text-center text-white custom-footer">
         <div
-          class="text-center p-3 rounded-4 mb-3"
+          class="text-center py-3 rounded-4 mb-3"
           style="background-color: rgba(0, 0, 0, 0.2)"
         >
+          <p class="mb-1">Todos os direitos reservados</p>
           <h6>© 2023 Copyright: VoluntaRia</h6>
         </div>
       </footer>
