--- a/codigo-fonte/src/loginCadastro/loginCadastro.html
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.html
@@ -57,7 +57,7 @@
                   >
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="./projetos/projetos.html"
+                  <a class="nav-link" href="../projetos/projetos.html"
                     >Projetos</a
                   >
                 </li>
