:sparkles: feat: Inclusao da pagina Perfil Voluntario e atualizacao do header na pasta geral

--- a/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
+++ b/codigo-fonte/src/cadastroProjeto/cadastroProjeto.html
@@ -22,33 +22,35 @@
     <div class="circle circle-8"></div>
 
     <header>
-        <header>
-            <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
-                <div class="container-fluid rounded-3 mx-3">
-                    <a class="navbar-brand d-flex nav-link ms-2" href="#">
-                        <img src="./images/logo-white.svg" alt="Logo" width="45" class="d-inline-block align-text-top">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Projetos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Entrar</a>
-                            </li>
-                        </ul>
-                    </div>
+        <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
+            <div class="container-fluid rounded-3 mx-3">
+                <a class="navbar-brand d-flex nav-link ms-2" href="#">
+                    <img src="../homePage/images/logo-white.svg" alt="Logo" width="45"
+                        class="d-inline-block align-text-top">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../projetos/projetos.html">Projetos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../perfilVoluntario/perfilVoluntarioo.html">Perfil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../loginCadastro/loginCadastro.html">Entrar</a>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
-        </header>
+            </div>
+        </nav>
     </header>
 
     <main id="mainContent">
