--- a/codigo-fonte/src/geral/menu/menu.html
+++ b/codigo-fonte/src/geral/menu/menu.html
@@ -19,6 +19,9 @@
             <a class="nav-link" href="#">Projetos</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#">Perfil</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">Entrar</a>
           </li>
         </ul>
