--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -46,6 +46,9 @@
               <a class="nav-link" href="./projetos/projetos.html">Projetos</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="./perfilVoluntario/perfilVoluntarioo.html">Perfil</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="./loginCadastro/loginCadastro.html">Entrar</a>
             </li>
           </ul>
