--- a/codigo-fonte/src/loginCadastro/loginCadastro.html
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.html
@@ -62,7 +62,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Entrar</a>
+                  <a class="nav-link active" href="#">Entrar</a>
                 </li>
               </ul>
             </div>
