--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="./homePage/css/style.css">
   <link rel="stylesheet" href="./homePage/css/menu.css">
   <link rel="stylesheet" href="./homePage/css/animation.css">
+  <link rel="stylesheet" href="./homePage/css/variables.css">
 </head>
 
 <body>
