--- a/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
+++ b/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
@@ -50,7 +50,7 @@
             <div class="row mt-5">
                 <div class="col-6">
                     <div class="card rounded-5 text-center p-4">
-                        <img class="mx-auto mb-4 img-fluid" src="../homePage/images/perfil-1.jpeg" alt="">
+                        <img class="mx-auto mb-4 img-fluid perfil" src="../homePage/images/perfil-1.jpeg" alt="">
                         <h5>Nome:</h5>
                         <h3>Jonas</h3>
                     </div>
