--- a/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
+++ b/codigo-fonte/src/perfilVoluntario/perfilVoluntarioo.html
@@ -45,7 +45,7 @@
         </nav>
     </header>
 
-    <main class="container">
+    <main class="container" id="mainContent">
         <div class="section section-1">
             <div class="row mt-5">
                 <div class="col-6">
@@ -191,7 +191,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="./cadastroProjeto.js"></script>
+    <script src="./perfilVoluntarioo.js"></script>
 </body>
 
 </html>
