--- a/codigo-fonte/src/loginCadastro/loginCadastro.html
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.html
@@ -29,7 +29,7 @@
     <main class="c-main">
       <header class="header-menu">
         <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
-          <div class="container-fluid rounded-3">
+          <div class="container-fluid rounded-3 mx-3">
             <a class="navbar-brand d-flex nav-link ms-2" href="#">
               <img
                 src="./images/logo-white.svg"
