update: alteracao cor de fundo

--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="projetos.css">
     <link rel="stylesheet" href="nav-topo.css">
     <link rel="stylesheet" href="modal.css">
@@ -23,7 +25,7 @@
                     <ul class="ul-list">
                         <li class="menu-item"><a class="link-menu-topo" href="../index.html">Home</a></li>
                         <li class="menu-item"><a class="link-menu-topo" href="projetos.html">Projetos</a></li>
-                        <li class="menu-item"><a class="link-menu-topo" href="../loginCadastro/loginCadastro.html">Entrar</a></li>
+                        <li class="menu-item"><a class="link-menu-topo" href="../perfilVoluntario/perfilVoluntario.html">Perfil</a></li>                        <li class="menu-item"><a class="link-menu-topo" href="../loginCadastro/loginCadastro.html">Entrar</a></li>
                     </ul>
                     </nav>
                     <svg class= "menu-img" xmlns="http://www.w3.org/2000/svg" onclick="expandMenu()" height="1.6em" fill= "gray" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
@@ -142,38 +144,38 @@
                 
 
 
-            <footer class="text-center text-white pt-3">
-                <hr class="my-4" />
-                <div class="container">
-                    <div class="row text-center d-flex justify-content-center">
-                        <div class="col-md-2">
-                            <h6 class="text-uppercase font-weight-bold">
-                                <a href="#!" class="text-white">Cadastre-se</a>
-                            </h6>
+                <footer class="text-center text-white pt-3">
+                    <hr class="my-4" />
+                    <div class="container">
+                        <div class="row text-center d-flex justify-content-center">
+                            <div class="col-md-2">
+                                <h6 class="text-uppercase font-weight-bold">
+                                    <a href="#!" class="text-white">Cadastre-se</a>
+                                </h6>
+                            </div>
+                            <div class="col-md-2">
+                                <h6 class="text-uppercase font-weight-bold">
+                                    <a href="#!" class="text-white">Login</a>
+                                </h6>
+                            </div>
+                            <div class="col-md-2">
+                                <h6 class="text-uppercase font-weight-bold">
+                                    <a href="#!" class="text-white">Projetos</a>
+                                </h6>
+                            </div>
+                            <div class="col-md-2">
+                                <h6 class="text-uppercase font-weight-bold">
+                                    <a href="#!" class="text-white">Contato</a>
+                                </h6>
+                            </div>
                         </div>
-                        <div class="col-md-2">
-                            <h6 class="text-uppercase font-weight-bold">
-                                <a href="#!" class="text-white">Login</a>
-                            </h6>
-                        </div>
-                        <div class="col-md-2">
-                            <h6 class="text-uppercase font-weight-bold">
-                                <a href="#!" class="text-white">Projetos</a>
-                            </h6>
-                        </div>
-                        <div class="col-md-2">
-                            <h6 class="text-uppercase font-weight-bold">
-                                <a href="#!" class="text-white">Contato</a>
-                            </h6>
-                        </div>
+                        </section>
                     </div>
-                    </section>
-                </div>
-                <hr class="my-4 mb-4" />
-                <div class="text-center p-3 rounded-4 mb-3" style="background-color: rgba(0, 0, 0, 0.2)">
-                    <h6> © 2023 Copyright: VoluntaRia</h6>
-                </div>
-            </footer>
+                    <hr class="my-4 mb-4" />
+                    <div class="text-center p-3 rounded-4 mb-3" style="background-color: rgba(0, 0, 0, 0.2)">
+                        <h6> © 2023 Copyright: VoluntaRia</h6>
+                    </div>
+                </footer>
         </div>
     </div>
     <div class="modal-container">
