--- a/codigo-fonte/src/loginCadastro/loginCadastro.html
+++ b/codigo-fonte/src/loginCadastro/loginCadastro.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login e Registro</title>
     <link rel="stylesheet" href="loginCadastro.css" />
-    <link rel="stylesheet" href="../geral/menu/menu.css" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.31/dist/sweetalert2.all.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.31/dist/sweetalert2.min.css"
@@ -30,7 +29,7 @@
       <header class="header-menu">
         <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
           <div class="container-fluid rounded-3 mx-3">
-            <a class="navbar-brand d-flex nav-link ms-2" href="#">
+            <a class="navbar-brand d-flex nav-link ms-2" href="../index.html">
               <img
                 src="./images/logo-white.svg"
                 alt="Logo"
