update: atualizacao layout

--- a/codigo-fonte/src/geral/menu/menu.html
+++ b/codigo-fonte/src/geral/menu/menu.html
@@ -4,7 +4,7 @@
   <nav class="navbar navbar-expand-md navbar-dark navbar-custom">
     <div class="container-fluid rounded-3 mx-3">
       <a class="navbar-brand d-flex nav-link ms-2" href="#">
-        <img src="./homePage/images/logo-white.svg" alt="Logo" width="45" class="d-inline-block align-text-top">
+        <img src="../homePage/images/logo-white.svg" alt="Logo" width="45" class="d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
