fix: - menu dropdown

--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -53,8 +53,8 @@
         </nav>
     </header>
 
-    <main class="corpo" id="mainContent">
-        <div class="grid-wrapper">
+    <main class="corpo" >
+        <div class="grid-wrapper" id="mainContent">
             <div class="menu-categoria">
                 <h2 class="menu-categoria-titulo">Categorias</h2>
                 <nav class="container-flex-categoria">
