:sparkles: feat: Inclusao videos homepage e ajuste de margens

--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -118,20 +118,29 @@
 
         <div class="col-lg-4 col-md-4 col-sm-12 mt-sm-2 mt-md-3">
           <div class="card rounded-5 card-projetos">
-            <img src="./homePage/images/imagem-limpeza.jpg" class="rounded-5 pb-2" alt="...">
-            <h5 class="pb-1">Amigo Solidário</h5>
+            <video autoplay loop muted class="rounded-5 pb-2 m-2">
+              <source src="./homePage/images/pexels-mikhail-nilov-8544140 (1080p).mp4" type="video/mp4">
+              Seu navegador não suporta a tag de vídeo.
+            </video>
+            <h5 class="pb-1">Plantando o Futuro</h5>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
           <div class="card rounded-5 card-projetos">
-            <img src="./homePage/images/imagem-maos.jpg" class="rounded-5 pb-2" alt="...">
-            <h5 class="pb-1">Abrace com Amor</h5>
+            <video autoplay loop muted class="rounded-5 pb-2 m-2">
+              <source src="./homePage/images/pexels-mikhail-nilov-7469712 (1080p).mp4" type="video/mp4">
+              Seu navegador não suporta a tag de vídeo.
+            </video>
+            <h5 class="pb-1">Anjos de Patas</h5>
           </div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
           <div class="card rounded-5 card-projetos">
-            <img src="./homePage/images/imagem-uniao.jpg" class="rounded-5 pb-2" alt="...">
-            <h5 class="pb-1 tittle">Juntos Podemos</h5>
+            <video autoplay loop muted class="rounded-5 pb-2 m-2">
+              <source src="./homePage/images/pexels-julia-m-cameron-6893741 (2160p).mp4" type="video/mp4">
+              Seu navegador não suporta a tag de vídeo.
+            </video>
+            <h5 class="pb-1 tittle">Amigo Solidário</h5>
           </div>
         </div>
       </div>
