feat: Criacao do design do modal

--- a/codigo-fonte/src/projetos/projetos.html
+++ b/codigo-fonte/src/projetos/projetos.html
@@ -204,21 +204,36 @@
     </footer>
     <div class="modal-container">
         <div class="modal-body">
-            <svg onclick="Modal()" class="btn-fechar-modal" xmlns="http://www.w3.org/2000/svg" height="1.2em"
+            <div class="modal-header">
+                <svg onclick="Modal()" class="btn-fechar-modal" xmlns="http://www.w3.org/2000/svg" height="1.2em"
                 viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
                 <path
                     d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c9.4-9.4 24.6-9.4 33.9 0l47 47 47-47c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-47 47 47 47c9.4 9.4 9.4 24.6 0 33.9s-24.6 9.4-33.9 0l-47-47-47 47c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l47-47-47-47c-9.4-9.4-9.4-24.6 0-33.9z" />
             </svg>
-
-            <h1 class="modal-titulo">Título do Projeto</h1>
-            <img class="modal-img" src="images/imagem-voluntarios-01.jpg">
-            <p class="modal-descricao">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est enim aspernatur
-                ipsum nesciunt. Totam porro, exercitationem quam delectus dignissimos aut at dolor in dolore, non harum,
-                quo ut cupiditate aliquam?</p>
-            <p class="btn-participar">Participar</p>
+            <h1 class="modal-titulo">Doe a quem precisa</h1>
+            </div>
+           <div class="modal-imagem-container">
+            
+           </div>
+            <div class="modal-descricao-container">
+                <p class="modal-descricao">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est enim aspernatur
+                    ipsum nesciunt. Totam porro, exercitationem quam delectus dignissimos aut at dolor in dolore, non harum,
+                    quo ut cupiditate aliquam?</p>
+                
+            </div>
             <div class="modal-dados-empresa-horas">
-                <p class="modal-empresa">Por: Empresa X</p>
-                <p class="modal-horas">Horas: XX</p>
+                <div class="modal-horas">
+                    <img class="img-horas"src="svg/relogio-black.svg" alt="">
+                    <h3>30 Horas</h3>
+                    <h4>Disponibilidade</h4>
+               </div>
+                <div class="modal-empresa">
+                    <img class="img-empresa" src="svg/empresa-black.svg" alt="">
+                    <h3 >Associação de Moradores do bairro Alto das Dores</h3>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <p class="btn-participar">Participar</p>
             </div>
         </div>
     </div>
